# Web-Scrapping-Bovespa

./: README.md  pyproject.toml
webscraping/: app.py  lab_b3.ipynb
